<resources>
    <string name="app_name">floodit</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_leader_board">HighScores</string>
    <string name="Floodit">Start A Game</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">settings</string>
    <string name="size_of_grid">Size of Grid</string>
    <string name="small">small</string>
    <string name="big">big</string>
    <string name="bigger">bigger</string>
    <string name="number_of_colors">Number of Colours</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="player_1">Player 1</string>
    <string name="how_to_play">How To Play</string>
    <string name="start_game">start game</string>
    <string name="How_To_Play">How to Play</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="Players_name">Player name</string>
    <string name="purple">Purple</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="start_a_game">Start A Game</string>


    <string-array name="game_spinner">
        <item>Game Mode</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="numOfColours">
        <item>Number of Colours</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
    </string-array>

    <string-array name="sizeOfGrid">
        <item>Grid Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_a_name">Please Enter A Name</string>
    <string name="title_activity_win_lose">WinLose</string>
    <string name="return_to_menu">Return To Menu</string>
</resources>
