<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beach"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/textViewPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_a_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player_1"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:onClick="onItem"
        android:text="@string/start_game" />
</LinearLayout>