<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alexm.floodit.MainMenu"
    tools:showIn="@layout/activity_main_menu">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/floodit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:layout_weight="1"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.alexm.floodit.MainMenu"
        tools:showIn="@layout/activity_main_menu">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.alexm.floodit.MainMenu"
            tools:showIn="@layout/activity_main_menu">


            <Spinner
                android:id="@+id/idSizeOfGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/idNumOfColours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.alexm.floodit.MainMenu"
            tools:showIn="@layout/activity_main_menu">


            <Switch
                android:id="@+id/CustomSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Custom Settings"
                android:textOff="Custom"
                android:textOn="Custom"
                tools:checked="false" />

            <RadioGroup
                android:id="@+id/RadioButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radioButtonEasyMode">

                <RadioButton
                    android:id="@+id/radioButtonEasyMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Easy"
                    android:visibility="invisible" />

                <RadioButton
                    android:id="@+id/radioButtonMediumMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medium"
                    android:visibility="invisible" />

                <RadioButton
                    android:id="@+id/radioButtonHardMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hard"
                    android:visibility="invisible" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.alexm.floodit.MainMenu"
        tools:showIn="@layout/activity_main_menu">


        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/background_light"
            android:onClick="onItem"
            android:text="@string/start_a_game" />

        <Button
            android:id="@+id/highSoresBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/background_light"
            android:onClick="onItem"
            android:text="@string/high_scores" />

        <Button
            android:id="@+id/rulesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/background_light"
            android:onClick="onItem"
            android:text="@string/how_to_play"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>